--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
 	  <h3>I love all things computer science and maths.</h3>
 	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
 	  <h3>For more check out my academic &amp; professional <a href="http://mrdeepakchauhan.github.io">Resume</a>.</h3>
-	  <h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}deepakchauhan</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
+		<h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a>deepakchauhan or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
 	</div>
 </section>
